<resources>


    <string name="add_address">Add address</string>
    <string name="add_address_description">add address</string>
    <string name="my_cart_title">My Cart</string>
    <string name="checkout_button">Checkout</string>
    <string name="total_title">Total</string>
    <string name="delivery_title">Delivery</string>
    <string name="total_price_pattern">$%s us</string>
    <string name="price">$%s</string>
</resources>